Cleaning unused item info